8007779: os::die() on solaris should generate core file

Reviewed-by: dholmes, rbackman